--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-paper": "^5.14.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
