--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native": "0.79.3",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.14.5",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
