--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-auth-session": "~6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
