--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "expo-auth-session": "~6.2.0"
+    "expo-auth-session": "~6.2.0",
+    "expo-application": "~6.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
