--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "^0.20.0",
     "expo-auth-session": "~6.2.0",
     "expo-application": "~6.1.4",
-    "expo-linear-gradient": "~14.1.5"
+    "expo-linear-gradient": "~14.1.5",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
