--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -32,7 +32,8 @@
     "expo-auth-session": "~6.2.0",
     "expo-application": "~6.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-av": "~15.1.6"
+    "expo-av": "~15.1.6",
+    "expo-dev-client": "~5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
