installed expo-blur

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "expo-application": "~6.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-av": "~15.1.6",
-    "expo-dev-client": "~5.2.0"
+    "expo-dev-client": "~5.2.0",
+    "expo-blur": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
