--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.11",
+    "expo-application": "~6.1.4",
+    "expo-auth-session": "~6.2.0",
+    "expo-av": "~15.1.6",
+    "expo-blur": "~14.1.5",
+    "expo-dev-client": "~5.2.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
     "react": "19.0.0",
@@ -28,13 +35,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-auth-session": "~6.2.0",
-    "expo-application": "~6.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-av": "~15.1.6",
-    "expo-dev-client": "~5.2.0",
-    "expo-blur": "~14.1.5"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
